--- a/core/package.json
+++ b/core/package.json
@@ -22,6 +22,7 @@
   "author": "Erda-FE",
   "license": "AGPL",
   "dependencies": {
+    "antd": "^4.16.13",
     "axios": "^0.21.1",
     "cube-state": "^1.5.6",
     "history": "4.x",
