--- a/cli/package.json
+++ b/cli/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@paiva/translation-google": "^1.0.9",
     "@types/json-schema": "^7.0.7",
+    "axios": "^0.23.0",
     "chalk": "^4.1.0",
     "cli-table": "^0.3.6",
     "commander": "^7.2.0",
