--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@erda-ui/cli",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "description": "Command line interface for rapid Erda UI development",
   "bin": {
     "erda-ui": "dist/bin/erda.js"
@@ -29,6 +29,7 @@
   "dependencies": {
     "@paiva/translation-google": "^1.0.9",
     "@types/json-schema": "^7.0.7",
+    "axios": "^0.23.0",
     "chalk": "^4.1.0",
     "cli-table": "^0.3.6",
     "commander": "^7.2.0",
