feat(common): create separate tsconfig file to support both webpack & vite

--- a/shell/package.json
+++ b/shell/package.json
@@ -161,6 +161,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-jsx-control-statements": "^4.1.0",
+    "babel-plugin-tsconfig-paths": "^1.0.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "core-js": "^3.18.2",
@@ -193,7 +194,7 @@
     "tsconfig-paths": "^3.10.1",
     "vinyl-fs": "^3.0.3",
     "vite": "^2.6.13",
-    "webpack": "^5.58.1",
+    "webpack": "^5.63.0",
     "webpack-build-notifier": "^2.1.1",
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^4.4.0",
