--- a/modules/market/package.json
+++ b/modules/market/package.json
@@ -42,8 +42,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.18.1",
     "qrcode.react": "^1.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "superagent": "^6.1.0",
