--- a/shell/package.json
+++ b/shell/package.json
@@ -89,6 +89,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "16.14.0",
     "react-flame-graph": "^1.4.0",
+    "react-markdown": "^7.1.0",
     "react-router-config": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-use": "^15.3.4",
