--- a/shell/package.json
+++ b/shell/package.json
@@ -93,6 +93,7 @@
     "react-router-config": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-use": "^15.3.4",
+    "remark-gfm": "^3.0.1",
     "requestidlecallback-polyfill": "^1.0.2",
     "sass-loader": "^10.1.1",
     "sass-resources-loader": "^2.1.1",
