--- a/shell/package.json
+++ b/shell/package.json
@@ -64,6 +64,7 @@
     "element-resize-event": "^2.0.7",
     "events": "^3.3.0",
     "file-loader": "^6.0.0",
+    "gantt-task-react": "^0.3.7",
     "highlight.js": "^10.5.0",
     "https-browserify": "^1.0.0",
     "i18next-scanner": "^3.1.0",
