--- a/pipeline.yml
+++ b/pipeline.yml
@@ -34,6 +34,11 @@ stages:
             workdir: ${{ dirs.erda-ui }}
           caches:
             - path: ${{ dirs.erda-ui }}/node_modules
+            - path: ${{ dirs.erda-ui }}/core/node_modules
+            - path: ${{ dirs.erda-ui }}/shell/node_modules
+            - path: ${{ dirs.erda-ui }}/scheduler/node_modules
+            - path: ${{ dirs.erda-ui }}/modules/uc/node_modules
+            - path: ${{ dirs.erda-ui }}/modules/market/node_modules
           resources:
             cpu: 2
             mem: 6144
