feat: add extra entry

--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,6 @@ shell/auto_test/auth
 shell/auto_test/**/*.secret.ts
 shell/auto_test/tests/results
 shell/app/modules/extra/*
+!shell/app/modules/extra/entry.js
 
 scheduler/dist/*
