--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "2.3.1",
-    "stylelint-config-ali": "^0.4.1"
+    "stylelint-config-ali": "^0.4.1",
+    "@typescript-eslint/parser": "^5.9.0",
+    "eslint-plugin-deprecation": "^1.3.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,scss,css}": "prettier --write"
