--- a/shell/tsconfig.json
+++ b/shell/tsconfig.json
@@ -96,6 +96,8 @@
       "core/config": ["../core/src/config.ts"],
       "core/service": ["../core/src/service/index"],
       "core/utils/ws": ["../core/src/utils/ws.ts"],
+      "core/global-space": ["../core/src/utils/global-space.ts"],
+      "core/event-hub": ["../core/src/utils/event-hub.ts"],
       "core/stores/route": ["../core/src/stores/route.ts"],
       "core/stores/loading": ["../core/src/stores/loading.ts"],
       "core/stores/userMap": ["../core/src/stores/user-map.ts"],
