--- a/shell/package.json
+++ b/shell/package.json
@@ -95,6 +95,7 @@
     "react-router-dom": "^5.2.0",
     "react-syntax-highlighter": "^15.4.5",
     "react-use": "^15.3.4",
+    "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "requestidlecallback-polyfill": "^1.0.2",
     "sass-loader": "^10.1.1",
