--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 registry=https://registry.npmjs.org/
 @terminus:registry=http://registry.npm.terminus.io/
-@nodelib:registry=https://registry.npm.taobao.org/
-@mrmlnc:registry=https://registry.npm.taobao.org/
+@nodelib:registry=https://registry.npmmirror.com/
+@mrmlnc:registry=https://registry.npmmirror.com/
+sass_binary_site=https://npmmirror.com/mirrors/node-sass/
