feat: move init requests to node to optimize first page paint time

--- a/scheduler/tsconfig.json
+++ b/scheduler/tsconfig.json
@@ -6,7 +6,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2019",
+    "target": "esnext",
     "outDir": "./dist",
     "baseUrl": "./",
     "skipLibCheck": true,
