--- a/scheduler/package.json
+++ b/scheduler/package.json
@@ -19,6 +19,7 @@
     "@nestjs/core": "^8.0.1",
     "@nestjs/platform-express": "^8.0.5",
     "@nestjs/serve-static": "^2.2.2",
+    "axios": "^0.26.1",
     "compression": "^1.7.4",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
@@ -29,7 +30,6 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/plugin-transform-async-to-generator": "^7.13.0",
     "@nestjs/schematics": "^8.0.0",
     "@types/express": "^4.17.13",
     "typescript": "^4.3.5"
