--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -15,10 +15,23 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  preCheck:
+    runs-on: ubuntu-latest
+    steps:
+      - name: filter path
+        uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            commonPath:
+            - 'shell/app/common/**'
+    outputs:
+      isExecute: ${{ steps.filter.outputs.commonPath }}
   run-test:
+    needs: preCheck
+    if: ${{ needs.preCheck.outputs.isExecute == 'true' }}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
