--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-deprecation": "^1.3.2"
   },
   "lint-staged": {
+    "shell/app/modules/extra/entry.js": "git checkout shell/app/modules/extra/entry.js",
     "*.{js,jsx,ts,tsx,json,scss,css}": "prettier --write"
   },
   "config": {
