--- a/shell/package.json
+++ b/shell/package.json
@@ -42,6 +42,7 @@
   "author": "Erda-FE",
   "license": "AGPL",
   "dependencies": {
+    "@erda-ui/components": "^0.1.0",
     "@erda-ui/dashboard-configurator": "2.0.15",
     "@erda-ui/react-markdown-editor-lite": "^1.4.7",
     "ace-builds": "^1.4.7",
